NGF-428 fix for scrollbar and sign in and register button

--- a/sass/components/_cta.scss
+++ b/sass/components/_cta.scss
@@ -81,7 +81,6 @@
 
 @media (min-width: 768px) {
 
-  .block-useraccountblock,
   .user-not-logged-in .block-useraccountblock {
     position: relative;
     margin-bottom: 15px;
@@ -111,9 +110,6 @@
     top: auto;
   }
 
-  .cta--join, .cta--signin{
-
-  }
 
   .cta--sidebar {
     position: relative;
